overflow fix

--- a/_sass/map.sass
+++ b/_sass/map.sass
@@ -252,6 +252,7 @@
       pointer-events: none
       height: 400px
       width: 250px
+      padding-bottom: 15px
       border: 2px solid #ef8f12
       border-radius: 3px
       background: #eee
@@ -261,7 +262,7 @@
       opacity: 0
       transition: all 300ms ease-in-out
       z-index: 500
-      overflow-y: scroll
+      overflow-y: auto
       overflow-x: hidden
 
       &.top
@@ -308,12 +309,13 @@
         color: #cf6f08
 
       .desc
+        width: 100%
         font-size: .95em
-        margin: 0 10px
         margin-bottom: 10px
         border-bottom: 2px solid #ef8f12
         padding-bottom: 10px
-        padding-top: 10px
+        padding: 10px
+        box-sizing: border-box
 
       .open
         height: 18px
